/-/login?redirect_uri=

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,7 @@
 <form method="POST">
   <input type="email" name="email" placeholder="user@example.com" />
   <input type="password" name="password" placeholder="password" />
+  <input type="hidden" name="redirect_uri" value="{{ .RedirectURI }}" />
   <button type="submit">Log in</button>
 </form>
 
